@@ -7,54 +7,58 @@
 #include "slider.h"
 
 
-Slider::Slider(int minValue, int maxValue, int pageStep, int tickStep, int value,
-        Qt::Orientation orientation, QString label, QWidget * parent) : QWidget(parent) {
-
+Slider::Slider(int minValue, int maxValue, int pageStep, int tickStep,
+        int value, Qt::Orientation orientation, QString label,
+        QWidget * parent): QWidget(parent)
+{
     QHBoxLayout *sliderLayout = new QHBoxLayout;
+    sliderLayout->setMargin(0);
+
     slider = new QSlider(orientation, parent);
     slider->setTickInterval(tickStep);
     slider->setTickPosition(QSlider::TicksLeft);
     slider->setRange(minValue, maxValue);
     slider->setSingleStep(pageStep);
     slider->setValue(value);
+    slider->setMinimumWidth(150);
     connect(slider, SIGNAL(valueChanged(int)), this, SLOT(updateSpinBox(int)));
 
     sliderSpin = new QSpinBox(this);
     sliderSpin->setRange(minValue, maxValue);
     sliderSpin->setValue(value);
-	sliderSpin->setKeyboardTracking(false);
+    sliderSpin->setKeyboardTracking(false);
     connect(sliderSpin, SIGNAL(valueChanged(int)), slider, SLOT(setValue(int)));
 
-	sliderLabel = new QLabel(this);
-	sliderLabel->setText(label);
-	sliderLabel->setFixedWidth(100);
-	sliderLabel->setBuddy(sliderSpin);
-    sliderLayout->setSpacing(0);
-    sliderLayout->setMargin(0);
-	sliderLayout->addWidget(sliderLabel);
+    QLabel* sliderLabel = new QLabel(this);
+    sliderLabel->setText(label);
+    sliderLabel->setBuddy(sliderSpin);
+
+    sliderLayout->addWidget(sliderLabel);
+    sliderLayout->addStretch();
     sliderLayout->addWidget(slider);
-	sliderLayout->addWidget(sliderSpin);
-	
+    sliderLayout->addSpacing(2);
+    sliderLayout->addWidget(sliderSpin);
+
     setLayout(sliderLayout);
 }
 
-Slider::~Slider() {
-
+Slider::~Slider()
+{
 }
 
-void Slider::setValue(int val) {
-
+void Slider::setValue(int val)
+{
     slider->setValue(val);
 }
 
-int Slider::value() {
-
+int Slider::value()
+{
     return(slider->value());
 }
 
-void Slider::updateSpinBox(int val) {
-
+void Slider::updateSpinBox(int val)
+{
     emit(valueChanged(val));
-	sliderSpin->setValue(val);
+    sliderSpin->setValue(val);
 }
 
